# oak

./: .env  Cargo.toml  Dockerfile  README.md  TODO.md  poke.yml
.github/workflows/: actions.yml
examples/: bulbasaur.json  ditto.json
examples/pokeapi/: diglett.json  mewtwo.json
examples/translation/: bulbasaur_shakespeare.json  diglett_yoda.json  mewtwo_yoda.json
fixtures/translation/: shakespeare.json  yoda.json
src/: main.rs  mocks.rs  pokeapi.rs  server.rs  translation.rs
