[package]
edition = "2018"
name = "oak"
version = "0.1.0"

[dependencies]
thiserror = "1.0.29"
tokio = { version = "1", features = [ "rt", "macros" ] }
reqwest = { version = "0.11.4", default-features = false, features = [ "json", "rustls-tls" ]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

[dev-dependencies]
pretty_assertions = "0.7.2"
