[package]
edition = "2018"
name = "oak"
version = "0.1.0"

[dependencies]
humantime-serde = "1.0.1"
reqwest = { version = "0.11.4", default-features = false, features = [ "json", "rustls-tls" ]}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_yaml = "0.8.20"
thiserror = "1.0.29"
tokio = { version = "1", features = [ "rt", "macros" ] }

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "0.7.2"
wiremock = "0.5"
