[package]
edition = "2018"
name = "oak"
version = "0.1.0"

[dependencies]
log = "0.4"
reqwest = { version = "0.11.4", default-features = false, features = [ "json", "rustls-tls" ]}
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
thiserror = "1.0.29"
tokio = { version = "1", features = [ "rt", "macros" ] }
humantime = "2.1"

[dev-dependencies]
claim = "0.5.0"
assert-json-diff = "2.0.1"
pretty_assertions = "0.7.2"
wiremock = "0.5"
